# playground

cmake/: CMakeLists.txt  Gen.cmake
cmake/metas/: CMakeLists.txt
cmake/src/: main.cpp
cpp/: arc_weak_ptr.cpp  binary_search.cpp  binary_search_with_property_testing.cpp  bind_exercises.cpp  brainfuck.cpp  builder_type.cpp  compile_time_string.cpp  concatenate_cpp20.cpp  fib.cpp  function_traits.cpp  function_traits_simple.cpp  functional.cpp  gap_buffer.cpp  generic_fold_presentation.cpp  immutable_list.cpp  interface_with_function_pointer.cpp  json_variant_optional.cpp  kattis_a_star.cpp  kattis_coast.cpp  kattis_codes.cpp  kattis_dijkstra.cpp  kattis_honey.cpp  kattis_pizza.cpp  lambda_presentation.cpp  laziness_in_c++.cpp  log_function_call.cpp  mandelbrot.cpp  matrix_multiply.cpp  neural_network.cpp  nucleotide_triple_frequency_packed.cpp  observables.cpp  optional.cpp  packed_nucleotides.cpp  parser_combinators.cpp  parser_combinators_v2.cpp  projected_equal_to.cpp  projections.cpp  property_based_testing_experiment.cpp  quick_sort_non_recursive_with_tests.cpp  result.cpp  (+18 more)
cpp/ConcurrencyBook/: .gitignore  ConcurrencyBook.sln
cpp/ConcurrencyBook/ConcurrencyBook/: ConcurrencyBook.vcxproj  ConcurrencyBook.vcxproj.filters  atomic_lock_free_test.cpp  data_structures.hpp  declarations.hpp  lock_based.cpp  (+6 more)
cpp/asio/: asio_boost-1_66_and_stlab_future_test.cpp  asio_mux.cpp
cpp/concurrency_book/: CMakeLists.txt
cpp/concurrency_book/src/: atomic_lock_free_test.cpp  declarations.hpp  lock_based.cpp  lock_based_data_structures.hpp  lock_free.cpp  lock_free_data_structures.hpp  main.cpp  managing_threads.cpp  memory_order.cpp  sharing_data.cpp  sleep_some.cpp  spin_mutex.cpp  std.hpp  synchronizing_concurrent_ops.cpp  threadsafe_queue_stress_test.cpp  util.hpp
cpp/move_your_ass/: CMakeLists.txt
cpp/move_your_ass/src/: main.cpp  main_window.cpp  main_window.hpp  pop_up.cpp  pop_up.hpp
cpp/vulkan_cmake/: CMakeLists.txt
cpp/vulkan_cmake/misc/: SDL2Config.cmake  glmConfig.cmake
cpp/vulkan_cmake/shaders/: shader.frag  shader.vert  vert.spv
cpp/vulkan_cmake/src/: app.cpp  app.hpp  asserts.hpp  main.cpp  read_file_contents.cpp  read_file_contents.hpp  scoped_guard.hpp  vulkan_helpers.cpp  vulkan_helpers.hpp
go/: gists.go
haskell/: ExpressionsV2.hs  ShuntingYard.hs
js/: async.js  async_most_frequent_letters.js  concept_in_javascript.js  continuation_monad.js  csp.js  functional_lazy_streams.js  lazy_streams.js  lens.js
misc/: Makefile  my_emacs_config.el  vimrc
rust/: List.hs  dining_philosophers.rs  estimate_pi_rayon.rs  longest_subsequence.hs  roman_numerals.rs  serde_serialize_deserialize_example.rs  sieve_of_eratosthenes.rs  simple_executor.rs  wordOccurrenceCount.hs
rust/get_gists/: Cargo.toml
rust/get_gists/src/: main.rs
