[package]
name = "get_gists"
version = "0.1.0"
authors = ["Ivan Barisic <ivan2029@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ureq]
version = "2.0.2"
features = ["json"]

[dependencies]
serde_json = "1.0"